[gd_scene load_steps=29 format=2]

[ext_resource path="res://images/weapons/orb/orb_anim_strip_6.png" type="Texture" id=1]
[ext_resource path="res://src/helpers/Label.gd" type="Script" id=2]
[ext_resource path="res://images/weapons/orb/orb_collected_anim_strip_5.png" type="Texture" id=3]
[ext_resource path="res://images/weapons/orb/orb copy.png" type="Texture" id=4]
[ext_resource path="res://src/weapons/Orb.gd" type="Script" id=5]
[ext_resource path="res://src/helpers/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/body text/Pixels TEXT.ttf" type="DynamicFontData" id=7]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5
rough = true
bounce = 0.3

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), null ],
"loop": false,
"name": "explode",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "move",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 12.0

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 7 )

[sub_resource type="Gradient" id=17]
colors = PoolColorArray( 1, 1, 1, 0.784314, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 17 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.992883, 0.498288 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=21]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 20 )
color_ramp = SubResource( 18 )

[node name="Orb" type="RigidBody2D"]
position = Vector2( -0.302078, 0.67968 )
collision_layer = 8
collision_mask = 0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.320001, 0.320001 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 14 )
animation = "move"
frame = 3
playing = true

[node name="CircleSprite" type="Sprite" parent="AnimatedSprite"]

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0.11775, -0.687302 )
scale = Vector2( 0.974214, 0.964348 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 15 )

[node name="Labels" type="Node2D" parent="."]

[node name="TimerLabel" type="Label" parent="Labels"]
margin_left = -24.5976
margin_top = -15.7248
margin_right = 26.4024
margin_bottom = 4.27521
custom_fonts/font = SubResource( 16 )
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node2D" parent="."]

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="Audio"]

[node name="BounceAudio" type="AudioStreamPlayer2D" parent="Audio"]

[node name="StreamParticles" type="Particles2D" parent="."]
show_behind_parent = true
lifetime = 3.0
visibility_rect = Rect2( -320, -180, 640, 360 )
local_coords = false
draw_order = 1
process_material = SubResource( 21 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="finished" from="Audio/ExplosionAudio" to="." method="_on_ExplosionAudio_finished"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]

[editable path="Hitbox"]
